; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varbit.c_anybit_typmodin.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varbit.c_anybit_typmodin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INVALID_PARAMETER_VALUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"invalid type modifier\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"length for type %s must be at least 1\00", align 1
@MaxAttrSize = common dso_local global i32 0, align 4
@BITS_PER_BYTE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [36 x i8] c"length for type %s cannot exceed %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @anybit_typmodin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @anybit_typmodin(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @ArrayGetIntegerTypmods(i32* %8, i32* %7)
  store i32* %9, i32** %6, align 8
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 1
  br i1 %11, label %12, label %18

12:                                               ; preds = %2
  %13 = load i32, i32* @ERROR, align 4
  %14 = load i32, i32* @ERRCODE_INVALID_PARAMETER_VALUE, align 4
  %15 = call i32 @errcode(i32 %14)
  %16 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @ereport(i32 %13, i32 %16)
  br label %18

18:                                               ; preds = %12, %2
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %19, align 4
  %21 = icmp slt i32 %20, 1
  br i1 %21, label %22, label %29

22:                                               ; preds = %18
  %23 = load i32, i32* @ERROR, align 4
  %24 = load i32, i32* @ERRCODE_INVALID_PARAMETER_VALUE, align 4
  %25 = call i32 @errcode(i32 %24)
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i8* %26)
  %28 = call i32 @ereport(i32 %23, i32 %27)
  br label %29

29:                                               ; preds = %22, %18
  %30 = load i32*, i32** %6, align 8
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @MaxAttrSize, align 4
  %33 = load i32, i32* @BITS_PER_BYTE, align 4
  %34 = mul nsw i32 %32, %33
  %35 = icmp sgt i32 %31, %34
  br i1 %35, label %36, label %46

36:                                               ; preds = %29
  %37 = load i32, i32* @ERROR, align 4
  %38 = load i32, i32* @ERRCODE_INVALID_PARAMETER_VALUE, align 4
  %39 = call i32 @errcode(i32 %38)
  %40 = load i8*, i8** %4, align 8
  %41 = load i32, i32* @MaxAttrSize, align 4
  %42 = load i32, i32* @BITS_PER_BYTE, align 4
  %43 = mul nsw i32 %41, %42
  %44 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i8* %40, i32 %43)
  %45 = call i32 @ereport(i32 %37, i32 %44)
  br label %46

46:                                               ; preds = %36, %29
  %47 = load i32*, i32** %6, align 8
  %48 = load i32, i32* %47, align 4
  store i32 %48, i32* %5, align 4
  %49 = load i32, i32* %5, align 4
  ret i32 %49
}

declare dso_local i32* @ArrayGetIntegerTypmods(i32*, i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
